--- a/css/style.css
+++ b/css/style.css
@@ -6,23 +6,45 @@
     --color-primary: #fff;
     --color-secondary: #000;
 }
+
+::-webkit-scrollbar {
+	width: 5px;
+    height: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	background: var(--color-secondary);
+	border-radius: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: var(--color-primary);
+	border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background: #ffffffc6;
+}
+
 html {
 	/* overflow-y: scroll; */
     overflow-x: hidden;
 	height: 100%;
 	-webkit-overflow-scrolling: touch;
 	/* overflow-scrolling: touch; */
-    transition-duration: 3s;
+    transition-duration: 9s;
 }
 body {
 	overflow-y: visible;
 	position: relative;
     height: unset;
-    background-color: var(--color-secondary);
-    color: var(--color-primary);
+    background-color: black;
+    color: white;
 }
 html, body {
-	overflow-x: hidden;
 	margin: 0;
 }
 
@@ -97,4 +119,65 @@ header {
     border-radius: 50%;
     position: fixed;
     z-index: 100;
+}
+
+#experience-sec {
+    width: 300vw;
+    height: 100vh;
+    background-color: var(--color-secondary);
+}
+
+/* experience section  */
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins:wght@200;400;700&display=swap");
+
+.wrapper {
+  overflow-x: hidden;
+  position: relative;
+}
+
+.experience-container svg {
+  position: absolute;
+  top: 12em;
+  left: 10vw;
+  width: 50vw;
+}
+.experience-container svg .mask {
+  width: 0;
+}
+
+.experience-container {
+  display: flex;
+  width: 300vw;
+}
+.experience-container .col {
+  display: flex;
+  gap: 3em;
+}
+.experience-container .col p {
+  font-size: 0.8rem;
+}
+.experience-container section {
+  width: 100vw;
+  padding: 20vw 10vw;
+}
+.experience-container section h1 {
+  font-size: 3rem;
+  margin: 0;
+}
+.experience-container section p {
+  font-size: 1.2rem;
+  width: 50vw;
+}
+.experience-section ul {
+  list-style-type: none;
+  display: flex;
+  gap: 3em;
+  width: 100%;
+  height: 300px;
+  padding: 0;
+}
+.experience-section ul li {
+  background: white;
+  border-radius: 0.3em;
+  flex-grow: 1;
 }
