--- a/css/style.css
+++ b/css/style.css
@@ -39,14 +39,15 @@ html {
 }
 body {
 	overflow-y: visible;
+  overflow-x: hidden;
 	position: relative;
-    height: unset;
-    background-color: black;
-    color: white;
+  height: unset;
+  background-color: black;
+  color: white;
 }
 html, body {
 	margin: 0;
-    overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 header {
@@ -116,7 +117,7 @@ header {
 #cursor {
     height: 20px;
     width: 20px;
-    background-color: white;
+    background-color: var(--color-primary);
     border-radius: 50%;
     position: fixed;
     z-index: 100;
@@ -163,13 +164,14 @@ header {
 }
 .experience-container section h1 {
   font-size: 3rem;
+  font-weight: 700;
   margin: 0;
 }
 .experience-container section p {
   font-size: 1.2rem;
   width: 50vw;
 }
-.experience-section ul {
+/* .experience-section ul {
   list-style-type: none;
   display: flex;
   gap: 3em;
@@ -181,4 +183,69 @@ header {
   background: white;
   border-radius: 0.3em;
   flex-grow: 1;
+} */
+
+
+/* Projects  */
+.spacer {
+	width:100%;
+	height:50vh;
+	background:#ddd;
+}
+
+
+.headline {
+	background:#2D4E86;
+	border-radius:6px;
+	height:4em;
+	width:100%;
+}
+
+.text {
+	margin:0.8em 0 0 0;
+	background:#2D4E86;
+	border-radius:6px;
+	height:1em;
+	width:100%;
+}
+
+
+
+
+.gallery {
+  display:flex;	
+  outline:1px solid red;
+}
+
+.left {
+	width:50%;
+}
+
+.detailsWrapper {
+	margin:auto;
+	width:80%;
+}
+
+.details {
+	height:100vh;
+	outline:1px solid green;
+	display:flex;
+	flex-direction:column;
+	justify-content:center;
+}
+
+
+.right {
+	outline:1px solid purple;
+	width:50%;
+	height:100vh;
+	display:flex;
+	flex-direction:column;
+	justify-content:center;
+}
+
+.photos {
+	width:40vw;
+	height:40vw;
+	background:maroon;
 }
