--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,34 @@ header {
     display: flex;
     justify-content: space-between;
 }
+
+.londrina {
+  font-family: "Londrina Solid", sans-serif;
+}
+.londrina-solid-thin {
+  font-family: "Londrina Solid", sans-serif;
+  font-weight: 100;
+  font-style: normal;
+}
+
+.londrina-solid-light {
+  font-family: "Londrina Solid", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.londrina-solid-regular {
+  font-family: "Londrina Solid", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.londrina-solid-black {
+  font-family: "Londrina Solid", sans-serif;
+  font-weight: 900;
+  font-style: normal;
+}
+
 .hero-sec {
     /* min-height: 100vh; */
     display: flex;
@@ -114,13 +142,31 @@ header {
     background: lime;
 }
 
-#cursor {
-    height: 20px;
-    width: 20px;
-    background-color: var(--color-primary);
-    border-radius: 50%;
-    position: fixed;
-    z-index: 100;
+
+/* custom cursor style */
+.cursor{
+  position: fixed;
+  width: 40px;
+  height: 40px;
+  margin-left: -20px;
+  margin-top: -20px;
+  border-radius: 50%;
+  border: 2px solid var(--color-primary);
+  transition: transform 0.7s ease;
+  transform-origin: center center;
+  pointer-events: none;
+  z-index: 1000;
+}
+
+.grow, .grow-small{
+  transform: scale(3);
+  background: white;
+  mix-blend-mode: difference; 
+  border: none;
+}
+
+.grow-small{
+  transform: scale(2);
 }
 
 #experience-sec {
