--- a/css/utils.css
+++ b/css/utils.css
@@ -16,7 +16,7 @@
 .hamburger div {
     width: 100%;
     height: 3px;
-    background-color: #fff;
+    background-color: var(--color-primary);
     transition: transform 0.5s ease; /* Hamburger animation transition */
 }
 
@@ -31,6 +31,7 @@
 
 .hamburger.active div:nth-child(3) {
     transform: translateY(-6px) rotate(-45deg);
+
 }
 
 .fullscreen-nav {
@@ -38,8 +39,10 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
-    background: rgb(0, 0, 0);
+    min-height: 100vh;
+    max-height: 100vh;
+    background: var(--color-secondary);
+    color: var(--color-primary);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -47,13 +50,16 @@
     z-index: 20;
     transform: translateX(-100%);
     transition: transform 0.5s ease;
+    overflow: hidden;
 }
 
 .fullscreen-nav.active {
     transform: translateX(0);
+    overflow: hidden;
 }
 
 .full-nav-link.active {
     transform: translateX(30px);
     transition: transform 1s ease;
+    /* overflow: hidden; */
 }
