--- a/css/style.css
+++ b/css/style.css
@@ -233,65 +233,159 @@ header {
 
 
 /* Projects  */
+
 .spacer {
-	width:100%;
-	height:50vh;
-	background:#ddd;
+  width: 100%;
+  height: 50vh;
+  background: #efefef;
 }
 
+.spacer > div {
+  color: #fff;
+  font-weight: 900;
+  font-size: 99px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 100px;
+}
 
 .headline {
-	background:#2D4E86;
-	border-radius:6px;
-	height:4em;
-	width:100%;
+  background: #d4d3d3;
+  border-radius: 6px;
+  height: auto;
+  width: 100%;
+  /* line-height: 3em; */
+  font-size: 33px;
+  padding-inline: 1em;
+  font-family: "Londrina Solid", sans-serif;
 }
 
 .text {
-	margin:0.8em 0 0 0;
-	background:#2D4E86;
-	border-radius:6px;
-	height:1em;
-	width:100%;
+  margin: 0.8em 0 0 0;
+  font-family: "Londrina Solid", sans-serif;
+  /* background: #efefef; */
+  border-radius: 6px;
+  /* height: 1em; */
+  width: 100%;
 }
 
-
-
-
 .gallery {
-  display:flex;	
-  outline:1px solid red;
+  display: flex;
+  outline: 1px solid red;
+  background: #f8e6ef;
 }
 
 .left {
-	width:50%;
+  width: 50%;
 }
 
 .detailsWrapper {
-	margin:auto;
-	width:80%;
+  margin: auto;
+  width: 80%;
 }
 
 .details {
-	height:100vh;
-	outline:1px solid green;
-	display:flex;
-	flex-direction:column;
-	justify-content:center;
+  outline: 1px solid green;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-
 .right {
-	outline:1px solid purple;
-	width:50%;
-	height:100vh;
-	display:flex;
-	flex-direction:column;
-	justify-content:center;
+  outline: 1px solid purple;
+  width: 50%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .photos {
-	width:40vw;
-	height:40vw;
-	background:maroon;
+  width: 40vw;
+  height: 40vw;
+  background: transparent;
+  position: relative;
+}
+
+.photos-box {
+  overflow: hidden;
+  position: absolute;
+  width: 80%;
+  height: 80%;
+  top: 10%;
+  left: 10%;
+  border-radius: 20px;
+}
+
+.photo {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.photo img {
+  float: left;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.red {
+  background: #9A9FD5;
+}
+
+.green {
+  background: #cdd1ff;
+}
+
+.blue {
+  background: #FDF399;
+}
+
+.orange {
+  background: #ffb399;
+}
+
+* {
+  outline: 0px solid transparent !important;
+  /* color: #1e90ff; */
+}
+
+@media all and (max-width: 640px) {
+  .gallery {
+    position: relative;
+  }
+
+  .left {
+    width: 100%;
+  }
+
+  .right {
+    width: 100%;
+    position: absolute;
+  }
+
+  .photos {
+    position: absolute;
+    width: 100%;
+    height: 50vh;
+    bottom: 0px;
+  }
+
+  .photos-box {
+    width: 90%;
+    height: 90%;
+    top: 0%;
+    left: 5%;
+    bottom: 5%;
+  }
+
+  .details {
+    justify-content: start;
+    margin-top: 90px;
+  }
 }
